# Pyside6Template

./: .pre-commit-config.yaml  README.md  buildPy2App.py  create_pyinstaller_file.py  info.cfg  info.py  package_alias.py  pyinstallertemplate.py  pyproject.toml  requirements.txt
.github/workflows/: default.yml
ci/: appdatatemplate.xml  bintemplate  cleandist.py  codesign.py  deb-script.sh  projectemplate.desktop
project/: __init__.py  info.py  main.py
project/resources/: icon.icns
