[tool.poetry]
name = "pyside6template"
version = "0.1.0"
description = ""
authors = ["Joey Yakimowich-Payne <jyapayne@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pyside6 = "^6.8.0.2"
certifi = "^2024.8.30"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.3.0"
wheel = "^0.44.0"
py2app = "^0.28.8"
pillow = "^11.0.0"
pre-commit = "^4.0.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
